class_file/snapshots/jdk-sun-nio-cs-UTF_16.class.snap
---
source: class_file/src/lib.rs
expression: display
---
public class sun.nio.cs.UTF_16 extends sun.nio.cs.Unicode
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #27                      //sun/nio/cs/UTF_16
  super_class: #10                     //sun/nio/cs/Unicode
  interfaces: 0, fields: 0, methods: 5, attributes: 3
Constant pool:
   #1 = String             #2               // UTF-16
   #2 = Utf8               UTF-16
   #3 = Methodref          #4.#5            // sun/nio/cs/StandardCharsets.aliases_UTF_16:()[Ljava/lang/String;
   #4 = Class              #6               // sun/nio/cs/StandardCharsets
   #5 = NameAndType        #7:#8            // aliases_UTF_16:()[Ljava/lang/String;
   #6 = Utf8               sun/nio/cs/StandardCharsets
   #7 = Utf8               aliases_UTF_16
   #8 = Utf8               ()[Ljava/lang/String;
   #9 = Methodref          #10.#11          // sun/nio/cs/Unicode."<init>":(Ljava/lang/String;[Ljava/lang/String;)V
  #10 = Class              #12              // sun/nio/cs/Unicode
  #11 = NameAndType        #13:#14          // "<init>":(Ljava/lang/String;[Ljava/lang/String;)V
  #12 = Utf8               sun/nio/cs/Unicode
  #13 = Utf8               <init>
  #14 = Utf8               (Ljava/lang/String;[Ljava/lang/String;)V
  #15 = Class              #16              // sun/nio/cs/UTF_16$Decoder
  #16 = Utf8               sun/nio/cs/UTF_16$Decoder
  #17 = Methodref          #15.#18          // sun/nio/cs/UTF_16$Decoder."<init>":(Ljava/nio/charset/Charset;)V
  #18 = NameAndType        #13:#19          // "<init>":(Ljava/nio/charset/Charset;)V
  #19 = Utf8               (Ljava/nio/charset/Charset;)V
  #20 = Class              #21              // sun/nio/cs/UTF_16$Encoder
  #21 = Utf8               sun/nio/cs/UTF_16$Encoder
  #22 = Methodref          #20.#18          // sun/nio/cs/UTF_16$Encoder."<init>":(Ljava/nio/charset/Charset;)V
  #23 = Methodref          #10.#24          // sun/nio/cs/Unicode.contains:(Ljava/nio/charset/Charset;)Z
  #24 = NameAndType        #25:#26          // contains:(Ljava/nio/charset/Charset;)Z
  #25 = Utf8               contains
  #26 = Utf8               (Ljava/nio/charset/Charset;)Z
  #27 = Class              #28              // sun/nio/cs/UTF_16
  #28 = Utf8               sun/nio/cs/UTF_16
  #29 = Utf8               ()V
  #30 = Utf8               Code
  #31 = Utf8               LineNumberTable
  #32 = Utf8               LocalVariableTable
  #33 = Utf8               this
  #34 = Utf8               Lsun/nio/cs/UTF_16;
  #35 = Utf8               historicalName
  #36 = Utf8               ()Ljava/lang/String;
  #37 = Utf8               newDecoder
  #38 = Utf8               ()Ljava/nio/charset/CharsetDecoder;
  #39 = Utf8               newEncoder
  #40 = Utf8               ()Ljava/nio/charset/CharsetEncoder;
  #41 = Utf8               MethodParameters
  #42 = Utf8               SourceFile
  #43 = Utf8               UTF_16.java
  #44 = Utf8               NestMembers
  #45 = Utf8               InnerClasses
  #46 = Utf8               Decoder
  #47 = Utf8               Encoder
{
  public sun.nio.cs.UTF_16();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=3, locals=1, args_size=1
         0: aload_0                 
         1: ldc           #1                  // String UTF-16
         3: invokestatic  #3                  // Method sun/nio/cs/StandardCharsets.aliases_UTF_16:()[Ljava/lang/String;
         6: invokespecial #9                  // Method sun/nio/cs/Unicode."<init>":(Ljava/lang/String;[Ljava/lang/String;)V
         9: return                  
      LineNumberTable:
        line 36: 0
        line 37: 9
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       10     0  this   Lsun/nio/cs/UTF_16;
  
  public java.lang.String historicalName();
    descriptor: ()Ljava/lang/String;
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: ldc           #1                  // String UTF-16
         2: areturn                 
      LineNumberTable:
        line 40: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        3     0  this   Lsun/nio/cs/UTF_16;
  
  public java.nio.charset.CharsetDecoder newDecoder();
    descriptor: ()Ljava/nio/charset/CharsetDecoder;
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=3, locals=1, args_size=1
         0: new           #15                 // class sun/nio/cs/UTF_16$Decoder
         3: dup                     
         4: aload_0                 
         5: invokespecial #17                 // Method sun/nio/cs/UTF_16$Decoder."<init>":(Ljava/nio/charset/Charset;)V
         8: areturn                 
      LineNumberTable:
        line 44: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        9     0  this   Lsun/nio/cs/UTF_16;
  
  public java.nio.charset.CharsetEncoder newEncoder();
    descriptor: ()Ljava/nio/charset/CharsetEncoder;
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=3, locals=1, args_size=1
         0: new           #20                 // class sun/nio/cs/UTF_16$Encoder
         3: dup                     
         4: aload_0                 
         5: invokespecial #22                 // Method sun/nio/cs/UTF_16$Encoder."<init>":(Ljava/nio/charset/Charset;)V
         8: areturn                 
      LineNumberTable:
        line 48: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        9     0  this   Lsun/nio/cs/UTF_16;
  
  public boolean contains(java.nio.charset.Charset);
    descriptor: (Ljava/nio/charset/Charset;)Z
    flags: (0x1041) ACC_PUBLIC, ACC_BRIDGE, ACC_SYNTHETIC
    Code: 
      stack=2, locals=2, args_size=2
         0: aload_0                 
         1: aload_1                 
         2: invokespecial #23                 // Method sun/nio/cs/Unicode.contains:(Ljava/nio/charset/Charset;)Z
         5: ireturn                 
      LineNumberTable:
        line 32: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        6     0  this   Lsun/nio/cs/UTF_16;
    MethodParameters:
      Name                             Flags
      <no name>                        synthetic 
}
SourceFile: "UTF_16.java"
NestMembers:
  sun/nio/cs/UTF_16$Encoder
  sun/nio/cs/UTF_16$Decoder
InnerClasses:
  private static #46= #15 of #27;             // Decoder=class sun/nio/cs/UTF_16$Decoder of class sun/nio/cs/UTF_16
  private static #47= #20 of #27;             // Encoder=class sun/nio/cs/UTF_16$Encoder of class sun/nio/cs/UTF_16
