class_file/snapshots/jdk-sun-nio-cs-UTF_32BE.class.snap
---
source: class_file/src/lib.rs
expression: display
---
public class sun.nio.cs.UTF_32BE extends sun.nio.cs.Unicode
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #31                      //sun/nio/cs/UTF_32BE
  super_class: #10                     //sun/nio/cs/Unicode
  interfaces: 0, fields: 0, methods: 5, attributes: 2
Constant pool:
   #1 = String             #2               // UTF-32BE
   #2 = Utf8               UTF-32BE
   #3 = Methodref          #4.#5            // sun/nio/cs/StandardCharsets.aliases_UTF_32BE:()[Ljava/lang/String;
   #4 = Class              #6               // sun/nio/cs/StandardCharsets
   #5 = NameAndType        #7:#8            // aliases_UTF_32BE:()[Ljava/lang/String;
   #6 = Utf8               sun/nio/cs/StandardCharsets
   #7 = Utf8               aliases_UTF_32BE
   #8 = Utf8               ()[Ljava/lang/String;
   #9 = Methodref          #10.#11          // sun/nio/cs/Unicode."<init>":(Ljava/lang/String;[Ljava/lang/String;)V
  #10 = Class              #12              // sun/nio/cs/Unicode
  #11 = NameAndType        #13:#14          // "<init>":(Ljava/lang/String;[Ljava/lang/String;)V
  #12 = Utf8               sun/nio/cs/Unicode
  #13 = Utf8               <init>
  #14 = Utf8               (Ljava/lang/String;[Ljava/lang/String;)V
  #15 = Class              #16              // sun/nio/cs/UTF_32Coder$Decoder
  #16 = Utf8               sun/nio/cs/UTF_32Coder$Decoder
  #17 = Class              #18              // sun/nio/cs/UTF_32Coder
  #18 = Utf8               sun/nio/cs/UTF_32Coder
  #19 = Methodref          #15.#20          // sun/nio/cs/UTF_32Coder$Decoder."<init>":(Ljava/nio/charset/Charset;I)V
  #20 = NameAndType        #13:#21          // "<init>":(Ljava/nio/charset/Charset;I)V
  #21 = Utf8               (Ljava/nio/charset/Charset;I)V
  #22 = Class              #23              // sun/nio/cs/UTF_32Coder$Encoder
  #23 = Utf8               sun/nio/cs/UTF_32Coder$Encoder
  #24 = Methodref          #22.#25          // sun/nio/cs/UTF_32Coder$Encoder."<init>":(Ljava/nio/charset/Charset;IZ)V
  #25 = NameAndType        #13:#26          // "<init>":(Ljava/nio/charset/Charset;IZ)V
  #26 = Utf8               (Ljava/nio/charset/Charset;IZ)V
  #27 = Methodref          #10.#28          // sun/nio/cs/Unicode.contains:(Ljava/nio/charset/Charset;)Z
  #28 = NameAndType        #29:#30          // contains:(Ljava/nio/charset/Charset;)Z
  #29 = Utf8               contains
  #30 = Utf8               (Ljava/nio/charset/Charset;)Z
  #31 = Class              #32              // sun/nio/cs/UTF_32BE
  #32 = Utf8               sun/nio/cs/UTF_32BE
  #33 = Utf8               ()V
  #34 = Utf8               Code
  #35 = Utf8               LineNumberTable
  #36 = Utf8               LocalVariableTable
  #37 = Utf8               this
  #38 = Utf8               Lsun/nio/cs/UTF_32BE;
  #39 = Utf8               historicalName
  #40 = Utf8               ()Ljava/lang/String;
  #41 = Utf8               newDecoder
  #42 = Utf8               ()Ljava/nio/charset/CharsetDecoder;
  #43 = Utf8               newEncoder
  #44 = Utf8               ()Ljava/nio/charset/CharsetEncoder;
  #45 = Utf8               MethodParameters
  #46 = Utf8               SourceFile
  #47 = Utf8               UTF_32BE.java
  #48 = Utf8               InnerClasses
  #49 = Utf8               Decoder
  #50 = Utf8               Encoder
{
  public sun.nio.cs.UTF_32BE();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=3, locals=1, args_size=1
         0: aload_0                 
         1: ldc           #1                  // String UTF-32BE
         3: invokestatic  #3                  // Method sun/nio/cs/StandardCharsets.aliases_UTF_32BE:()[Ljava/lang/String;
         6: invokespecial #9                  // Method sun/nio/cs/Unicode."<init>":(Ljava/lang/String;[Ljava/lang/String;)V
         9: return                  
      LineNumberTable:
        line 34: 0
        line 35: 9
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       10     0  this   Lsun/nio/cs/UTF_32BE;
  
  public java.lang.String historicalName();
    descriptor: ()Ljava/lang/String;
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: ldc           #1                  // String UTF-32BE
         2: areturn                 
      LineNumberTable:
        line 38: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        3     0  this   Lsun/nio/cs/UTF_32BE;
  
  public java.nio.charset.CharsetDecoder newDecoder();
    descriptor: ()Ljava/nio/charset/CharsetDecoder;
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=4, locals=1, args_size=1
         0: new           #15                 // class sun/nio/cs/UTF_32Coder$Decoder
         3: dup                     
         4: aload_0                 
         5: iconst_1                
         6: invokespecial #19                 // Method sun/nio/cs/UTF_32Coder$Decoder."<init>":(Ljava/nio/charset/Charset;I)V
         9: areturn                 
      LineNumberTable:
        line 42: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       10     0  this   Lsun/nio/cs/UTF_32BE;
  
  public java.nio.charset.CharsetEncoder newEncoder();
    descriptor: ()Ljava/nio/charset/CharsetEncoder;
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=5, locals=1, args_size=1
         0: new           #22                 // class sun/nio/cs/UTF_32Coder$Encoder
         3: dup                     
         4: aload_0                 
         5: iconst_1                
         6: iconst_0                
         7: invokespecial #24                 // Method sun/nio/cs/UTF_32Coder$Encoder."<init>":(Ljava/nio/charset/Charset;IZ)V
        10: areturn                 
      LineNumberTable:
        line 46: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       11     0  this   Lsun/nio/cs/UTF_32BE;
  
  public boolean contains(java.nio.charset.Charset);
    descriptor: (Ljava/nio/charset/Charset;)Z
    flags: (0x1041) ACC_PUBLIC, ACC_BRIDGE, ACC_SYNTHETIC
    Code: 
      stack=2, locals=2, args_size=2
         0: aload_0                 
         1: aload_1                 
         2: invokespecial #27                 // Method sun/nio/cs/Unicode.contains:(Ljava/nio/charset/Charset;)Z
         5: ireturn                 
      LineNumberTable:
        line 31: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        6     0  this   Lsun/nio/cs/UTF_32BE;
    MethodParameters:
      Name                             Flags
      <no name>                        synthetic 
}
SourceFile: "UTF_32BE.java"
InnerClasses:
  protected static #49= #15 of #17;           // Decoder=class sun/nio/cs/UTF_32Coder$Decoder of class sun/nio/cs/UTF_32Coder
  protected static #50= #22 of #17;           // Encoder=class sun/nio/cs/UTF_32Coder$Encoder of class sun/nio/cs/UTF_32Coder
